--- a/Blogging/Views/Shared/_Layout.cshtml
+++ b/Blogging/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                             <a class="nav-link text-light" asp-controller="Home" asp-action="Index">Početna</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-controller="Home" asp-action="Index">Popularne Teme</a>
+                            <a class="nav-link text-light" asp-controller="Home" asp-action="Topics">Popularne Teme</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-controller="Home" asp-action="Privacy">Politika Privatnosti</a>
