--- a/Blogging/Views/Topic/TopicList.cshtml
+++ b/Blogging/Views/Topic/TopicList.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model IEnumerable<Topic>
+
+<h2 class="text-center">
+    Pogledajte neke od aktuelnih tema!
+</h2>
+
+<div class="row row-cols-1 row-cols-md-3 g-4">
+    @foreach (var topic in Model)
+    {
+            <partial name="_TopicCard" model="topic" />
+    }
+</div>
