--- a/Blogging/Views/Post/PostList.cshtml
+++ b/Blogging/Views/Post/PostList.cshtml
@@ -7,7 +7,7 @@
 </h1>
 
 <div class="col-md-3">
-    @foreach (var post in Model.SelectedTopic)
+    @foreach (var post in Model.Posts)
     {
         <partial name="_PostCard" model="post"/>
     }
