--- a/Blogging/Views/Shared/_TopicCard.cshtml
+++ b/Blogging/Views/Shared/_TopicCard.cshtml
@@ -3,10 +3,11 @@
 
 <div class="col">
     <div class="card position-relative" style="width: 18rem;">
-        <img src="@Model.ThumbnailUrl" class="card-img-top" alt="TopicImage">
+        <img src="@Model.ThumbnailUrl" class="card-img-top" style="height: 200px; width: 18rem" alt="TopicImage">
         <div class="card-body">
             <h5 class="card-title">@Model.Name</h5>
             <p class="card-text">@Model.Description</p>
+            <a asp-controller="Post" asp-action="PostList" asp-route-topicId="@Model.TopicId" class="stretched-link"></a>
         </div>
     </div>
 </div>
