--- a/Blogging/Views/Home/Index.cshtml
+++ b/Blogging/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿       ﻿<div id="welcomeCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+﻿<div id="welcomeCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#welcomeCarousel" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Welcome 1"></button>
