--- a/Blogging/Views/User/Login.cshtml
+++ b/Blogging/Views/User/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Blogging.ViewModels
-@model RegisterViewModel;
+@model LoginViewModel;
 
 <div class="container">
     <h3 class="text-center mt-5 mb-5">Uloguj se</h3>
