--- a/Blogging/Views/User/Registration.cshtml
+++ b/Blogging/Views/User/Registration.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Blogging.ViewModels
-@model RegisterViewModel;
+@model User;
 
 <div class="container">
     <h3 class="text-center mt-5 mb-5">Registruj se</h3>
