Successfully implemented post comments, showing the creator's username or "Anonymous" it the user isn't logged in

--- a/Blogging/Views/Shared/_Layout.cshtml
+++ b/Blogging/Views/Shared/_Layout.cshtml
@@ -20,8 +20,12 @@
 </head>
 
 @{
-    var isUserLoggedIn = HttpContextAccessor.HttpContext.User.Identity.IsAuthenticated;
-    var username = HttpContextAccessor.HttpContext.User.Identity.Name;
+    var user = new User();
+    var userCookie = HttpContextAccessor.HttpContext!.Request.Cookies["User"];
+    if (userCookie != null)
+    {
+        user = JsonConvert.DeserializeObject<User>(userCookie!);
+    }
 }
 
 <body>
@@ -50,9 +54,9 @@
                     </ul>
                     <ul class="nav navbar-nav ms-auto">
                         <li class="nav-item d-flex flex-column flex-md-row">
-                            @if (isUserLoggedIn)
+                            @if (!string.IsNullOrEmpty(user!.Username))
                             {
-                                <a class="btn btn-outline-light me-2 log-in-btn" asp-controller="User" asp-action="Profile">@username</a>
+                                <a class="btn btn-outline-light me-2 log-in-btn" asp-controller="User" asp-action="Profile">@user.Username</a>
                                 <a class="btn btn-outline-light mt-3 mt-md-0 me-2" asp-controller="User" asp-action="Logout">Izloguj se</a>
                             }
                             else
@@ -69,7 +73,7 @@
                                         <path d="M12 2c-5.52 0-10 4.48-10 10s4.48 10 10 10 10-4.48 10-10-4.48-10-10-10zm4 11h-3v3h-2v-3h-3v-2h3v-3h2v3h3v2z" />
                                     </svg>
                                 </a>
-                                
+
                             }
                         </li>
                     </ul>
