--- a/Blogging/Views/Post/PostCreator.cshtml
+++ b/Blogging/Views/Post/PostCreator.cshtml
@@ -1,5 +1,23 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using Blogging.ViewModels
+
+@model CreatePostViewModel
+
+<h3></h3>
+
+<form asp-controller="Post" asp-action="CreatePost" method="post">
+    <div class="form-group mt-5">
+        <label asp-for="Head">Naslov</label>
+        <input asp-for="Head" class="form-control" placeholder="Naslov vaše objave..." />
+    </div>
+    <div class="form-group">
+        <label asp-for="Body">Sadržaj</label>
+        <textarea asp-for="Body" class="form-control" rows="8" placeholder="Tekst vaše objave..."></textarea>
+    </div>
+    <div class="form-group">
+        <label asp-for="TopicId">Tema</label>
+        <select asp-for="TopicId" class="form-control" asp-items="@(new SelectList(ViewBag.Topics, "TopicId", "Name"))">
+            <option value="">Select a topic</option>
+        </select>
+    </div>
+    <button type="submit" class="btn btn-warning mt-3">Objavi</button>
+</form>
