--- a/Blogging/Views/Shared/_Layout.cshtml
+++ b/Blogging/Views/Shared/_Layout.cshtml
@@ -54,6 +54,14 @@
                     </ul>
                     <ul class="nav navbar-nav ms-auto">
                         <li class="nav-item d-flex flex-column flex-md-row">
+                            <a class="btn btn-outline-success me-2" asp-controller="Post" asp-action="PostCreator">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor" class="bi bi-trash" viewBox="0 0 24 24">
+                                    <path d="M12 2c-5.52 0-10 4.48-10 10s4.48 10 10 10 10-4.48 10-10-4.48-10-10-10zm4 11h-3v3h-2v-3h-3v-2h3v-3h2v3h3v2z" />
+                                </svg>
+                                Napravi novu objavu
+                            </a>
+                        </li>
+                        <li class="nav-item d-flex flex-column flex-md-row">
                             @if (!string.IsNullOrEmpty(user!.Username))
                             {
                                 <a class="btn btn-outline-light me-2 log-in-btn" asp-controller="User" asp-action="Profile">@user.Username</a>
