--- a/Blogging/Views/Shared/_Layout.cshtml
+++ b/Blogging/Views/Shared/_Layout.cshtml
@@ -70,8 +70,17 @@
 
                             @if (isLoggedIn)
                             {
-                                <a class="btn btn-outline-light me-2 log-in-btn" asp-controller="User" asp-action="UserProfile">@username</a>
-                                <a class="btn btn-outline-light mt-3 mt-md-0 me-2" asp-controller="User" asp-action="Logout">Izloguj se</a>
+                                <a class="btn btn-outline-light me-2 log-in-btn" asp-controller="User" asp-action="UserProfile">@username
+                                    <svg width="21" height="21" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="currentColor" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                                        <circle cx="8" cy="6" r="3.25" />
+                                        <path d="m2.75 14.25c0-2.5 2-5 5.25-5s5.25 2.5 5.25 5" />
+                                    </svg>
+                                    </a>
+                                <a class="btn btn-outline-light mt-3 mt-md-0 me-2" asp-controller="User" asp-action="Logout">Izloguj se
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="none" class="bi bi-trash" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12h-9.5m7.5 3l3-3-3-3m-5-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2h5a2 2 0 002-2v-1" />
+                                    </svg>
+                                </a>
                             }
                             else
                             {
