--- a/Blogging/Views/Shared/_Layout.cshtml
+++ b/Blogging/Views/Shared/_Layout.cshtml
@@ -8,14 +8,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blogging</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <link href="~/css/bootstrap-override.css" rel="stylesheet">
 
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/jquery-validate/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="~/lib/bootstrap/js/bootstrap.js"></script>
+  
+    @* <link href="~/css/bootstrap-override.css" rel="stylesheet"> *@
     <link rel="stylesheet" href="~/css/custom.css">
 </head>
 
@@ -23,15 +25,6 @@
     var isLoggedIn = HttpContextAccessor!.HttpContext!.User.Identity.IsAuthenticated;
     var username = HttpContextAccessor.HttpContext.User.Identity.Name;
 }
-
-@* @{
-    var user = new User();
-    var userCookie = HttpContextAccessor.HttpContext!.Request.Cookies["User"];
-    if (userCookie != null)
-    {
-        user = JsonConvert.DeserializeObject<User>(userCookie!);
-    }
-} *@
 
 <body>
     <header>
@@ -51,7 +44,7 @@
                             <a class="nav-link text-light" asp-controller="Home" asp-action="Index">Početna</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-controller="Topic" asp-action="TopicList">Popularne Teme</a>
+                            <vc:topic-menu></vc:topic-menu>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-controller="Home" asp-action="Privacy">Politika Privatnosti</a>
@@ -98,28 +91,6 @@
                                 </a>
 
                             }
-
-                            @* @if (!string.IsNullOrEmpty(user!.Username))
-                            {
-                            <a class="btn btn-outline-light me-2 log-in-btn" asp-controller="User" asp-action="UserProfile">@user.Username</a>
-                            <a class="btn btn-outline-light mt-3 mt-md-0 me-2" asp-controller="User" asp-action="Logout">Izloguj se</a>
-                            }
-                            else
-                            {
-                            <a class="btn btn-outline-light me-2 log-in-btn" asp-controller="User" asp-action="Login">
-                            Uloguj se
-                            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor" class="bi bi-trash" viewBox="0 0 24 24">
-                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm4.29 10.71l-4.79 4.79-1.42-1.42 3.79-3.79-3.79-3.79 1.42-1.42 4.79 4.79zM12 4c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8z" />
-                            </svg>
-                            </a>
-                            <a class="btn btn-outline-light mt-3 mt-md-0" asp-controller="User" asp-action="Registration">
-                            Registruj se
-                            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor" class="bi bi-trash" viewBox="0 0 24 24">
-                            <path d="M12 2c-5.52 0-10 4.48-10 10s4.48 10 10 10 10-4.48 10-10-4.48-10-10-10zm4 11h-3v3h-2v-3h-3v-2h3v-3h2v3h3v2z" />
-                            </svg>
-                            </a>
-
-                            } *@
                         </li>
                     </ul>
                 </div>
@@ -137,6 +108,9 @@
             &copy; 2024 - Blogging - <a asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await Component.InvokeAsync("Notyf")
 </body>
