--- a/Blogging/Views/_ViewImports.cshtml
+++ b/Blogging/Views/_ViewImports.cshtml
@@ -1,4 +1,10 @@
 ﻿@using Blogging
 @using Blogging.Models
+@using Blogging.Components
+@using Blogging.TagHelpers
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Blogging
+@addTagHelper Blogging.TagHelpers.*, Blogging
+
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor;
