--- a/Blogging/Views/Shared/Components/TopicMenu/Default.cshtml
+++ b/Blogging/Views/Shared/Components/TopicMenu/Default.cshtml
@@ -20,5 +20,11 @@
                 </a>
             </li>
         }
+        <li>
+            <a asp-controller="Post" asp-action="PostList"
+            class="dropdown-item">
+            Sve Objave
+        </a>
+        </li>
     </ul>
 </li>
