--- a/Blogging/Views/Shared/_PostCard.cshtml
+++ b/Blogging/Views/Shared/_PostCard.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Post
 
-<div class="card mb-3" style="max-width:540px">
+<div class="card mb-3">
     <div class="row no-gutters">
-        <div class="col-md-6">
-            <img src="@Model.Thumbnail" class="card-img" style=" height: 200px; width: 12rem" alt="TopicImage" />
+        <div class="col-md-6" style="max-width: 300px">
+            <img src="@Model.Thumbnail" class="card-img" alt="TopicImage" />
         </div>
         <div class="col-md-6">
             <div class="card-body">
