--- a/Blogging/Views/Post/PostEditor.cshtml
+++ b/Blogging/Views/Post/PostEditor.cshtml
@@ -1,30 +1,31 @@
 ﻿@using Blogging.ViewModels
-@model CreatePostViewModel
+@model UpdatePostViewmodel
 
-<h3>Napravite novu objavu</h3>
+<h3>Izmenite objavu</h3>
 
-<form asp-controller="Post" asp-action="CreatePost" method="post">
+<form asp-controller="Post" asp-action="EditPost" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <input type="hidden" asp-for="ID" />
 
     <div class="form-group mt-5">
         <label asp-for="Head"></label>
-        <input asp-for="Head" class="form-control" placeholder="Naslov vaše objave..." />
+        <input asp-for="Head" class="form-control" placeholder=@Model.Head />
         <span asp-validation-for="Head" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label asp-for="Body"></label>
-        <textarea asp-for="Body" class="form-control" rows="8" placeholder="Tekst vaše objave..."></textarea>
+        <textarea asp-for="Body" class="form-control" rows="8" placeholder="@Model.Body"></textarea>
         <span asp-validation-for="Body" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label asp-for="TopicId"></label>
-        <select asp-for="TopicId" class="form-control" asp-items="@(new SelectList(ViewBag.Topics, "TopicId", "Name"))">
+        <select asp-for="TopicId" class="form-control" placeholder="@Model.TopicId" asp-items="@(new SelectList(ViewBag.Topics, "TopicId", "Name"))">
             <option value="">Izaberite temu vaše objave</option>
         </select>
         <span asp-validation-for="TopicId" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-warning mt-3">Objavi</button>
+    <button type="submit" class="btn btn-warning mt-3">Izmeni</button>
 </form>
