--- a/Blogging/Views/Post/ViewPost.cshtml
+++ b/Blogging/Views/Post/ViewPost.cshtml
@@ -1,4 +1,6 @@
 ﻿@model Post
+@using Microsoft.AspNetCore.Http;
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 
 <div class="container mt-5">
     <div class="card">
@@ -16,10 +18,16 @@
                 }
                 else
                 {
-                    @:Anonymous
+                   <p class="ms-3 text-muted">
+                        Anonymous
+                   </p>
                 }
             }
         </p>
+        @{
+            var isLoggedIn = HttpContextAccessor!.HttpContext!.User.Identity.IsAuthenticated;
+            var username = HttpContextAccessor.HttpContext.User.Identity.Name;
+        }
         <span class="border border-white rounded ms-3 me-3" style="background-color: #ECECEC">
             <div class="card-body">
                 <div class="row">
@@ -37,6 +45,28 @@
         <div class="card-footer">
             <p class="text-muted">Objavljeno: @Model.TimeCreated.ToString("dd/MM/yyyy")</p>
             <p class="text-muted">Izmenjeno: @Model.TimeUpdated.ToString("dd/MM/yyyy")</p>
+            @if (isLoggedIn && username == Model.User?.Username)
+            {
+                <div class="d-flex flex-row-reverse">
+                    <form asp-controller="Post" asp-action="RemovePost" method="post">
+                        <input type="hidden" name="postId" value="@Model.ID" />
+                        <button type="submit" class="btn btn-outline-danger ms-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" stroke="currentColor" viewBox="0 0 24 24">
+                                <path d="M3 6v18h18v-18h-18zm5 14c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm5 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm5 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm4-18v2h-20v-2h5.711c.9 0 1.631-1.099 1.631-2h5.315c0 .901.73 2 1.631 2h5.712z" />
+                            </svg>
+                        </button>
+                    </form>
+                    <form asp-controller="Post" asp-action="PostEditor" method="post">
+                        <input type="hidden" name="postId" value="@Model.ID" />
+                        <button type="submit" class="btn btn-outline-success">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" stroke="currentColor" viewBox="0 0 24 24">
+                                <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7" />
+                                <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z" />
+                            </svg>
+                        </button>
+                    </form>
+                </div>
+            }
             <h3>Comments</h3>
             <ul>
                 @if (Model.Comments != null)
