--- a/Blogging/Views/Post/ViewPost.cshtml
+++ b/Blogging/Views/Post/ViewPost.cshtml
@@ -37,7 +37,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12 d-flex justify-content-center">
-                        <img src="@Model.Thumbnail" class="img-fluid" alt="Thumbnail">
+                        <img src="~/images/Thumbnail.png" class="img-fluid" alt="Thumbnail">
                     </div>
                 </div>
             </div>
