--- a/Blogging/Views/Shared/_PostCard.cshtml
+++ b/Blogging/Views/Shared/_PostCard.cshtml
@@ -1,26 +1,30 @@
 ﻿@model Post
 
-<div class="card mb-3">
-    <div class="row no-gutters">
-        <div class="col-md-6" style="max-width: 300px">
-            <img src="@Model.Thumbnail" class="card-img" alt="TopicImage" />
-        </div>
-        <div class="col-md-6">
-            <div class="card-body">
-                <h5 class="card-title">
-                    @Model.Head
-                </h5>
-                <p class="card-text">
-                    <small class="text-muted">
-                        Posted @Model.TimeCreated
-                    </small>
-                </p>
-                <p class="card-text">
-                    <small class="text-muted">
-                        Last edited @Model.TimeUpdated
-                    </small>
-                </p>
-                <a asp-controller="Post" asp-action="ViewPost" asp-route-postId="@Model.ID" class="stretched-link"></a>
+<div class="container">
+    <div class="row no-gutters justify-content-center">
+        <div class="card mb-3 col-md-6">
+            <div class="row no-gutters">
+                <div class="col-md-4">
+                    <img src="~/images/Thumbnail.png" class="img-thumbnail" alt="TopicImage" />
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            @Model.Head
+                        </h5>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                Objavljeno: @Model.TimeCreated
+                            </small>
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                Izmenjeno: @Model.TimeUpdated
+                            </small>
+                        </p>
+                        <a asp-controller="Post" asp-action="ViewPost" asp-route-postId="@Model.ID" class="stretched-link"></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
